Add libreoffice files.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,23 @@
+abook/addressbook~
+config/chromium/*
+config/chromium-tor/*
+config/gtk-2.0/gtkfilechooser.ini
+config/gconf/*
+config/libreoffice/4/user/config/javasettings_Linux_X86_64.xml
+config/libreoffice/4/user/extensions/*
+config/libreoffice/4/user/psprint/pspfontcache
+config/libreoffice/4/user/store/.templdir.cache
+config/libreoffice/4/user/temp/document_io_logring.txt
+config/libreoffice/4/user/uno_packages/*
+config/pavucontrol.ini
+config/pulse/*
+config/Trolltech.conf
+config/ranger/history
 cmus/cache
 cmus/command-history
 cmus/lib.pl
 cmus/playlist.pl
 cmus/search-history
+mcabber/otr
+mutt/aliases.bak
+surf/cookies.txt
