Ignore registrymodifications.xcu

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ config/gconf/*
 config/libreoffice/4/user/config/javasettings_Linux_X86_64.xml
 config/libreoffice/4/user/extensions/*
 config/libreoffice/4/user/psprint/pspfontcache
+config/libreoffice/4/user/registrymodifications.xcu
 config/libreoffice/4/user/store/.templdir.cache
 config/libreoffice/4/user/temp/document_io_logring.txt
 config/libreoffice/4/user/uno_packages/*
