Update config files.

--- a/languagetool-ooo.cfg
+++ b/languagetool-ooo.cfg
@@ -1,7 +1,12 @@
+#LanguageTool configuration
+#Sun Jan 26 21:28:34 GMT 2014
+disabledRules.en-US=THREE_NN
+autoDetect=false
+disabledCategories.en-US=
+serverPort=8081
+useGUIConfig=false
 enabledRules.en-US=
 serverMode=false
-autoDetect=false
-useGUIConfig=false
-disabledRules.en-US=THREE_NN
-serverPort=8081
-disabledCategories.en-US=
+disabledRules.en-GB=EN_GB_SIMPLE_REPLACE,EN_UNPAIRED_BRACKETS
+disabledCategories.en-GB=
+enabledRules.en-GB=
