--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@ config/chromium/*
 config/chromium-tor/*
 config/gtk-2.0/gtkfilechooser.ini
 config/gconf/*
+config/libreoffice/4/.lock
+config/libreoffice/4/user/backup/*
 config/libreoffice/4/user/config/javasettings_Linux_X86_64.xml
 config/libreoffice/4/user/extensions/*
 config/libreoffice/4/user/psprint/pspfontcache
@@ -19,7 +21,6 @@ cmus/command-history
 cmus/lib.pl
 cmus/playlist.pl
 cmus/search-history
-IdeaIC12__config/componentVersions/*
 mcabber/otr
 mutt/aliases.bak
 surf/cookies.txt
@@ -31,8 +32,9 @@ IdeaIC13__config/options/options.xml
 IdeaIC13__config/options/other.xml
 IdeaIC13__config/options/runner.layout.xml
 IdeaIC13__config/options/statistics.application.usages.xml
-IdeaIC13__config/options/vcs.xml
 IdeaIC13__config/options/usage.statistics.xml
+IdeaIC13__config/options/vcs.xml
+IdeaIC13__config/options/window.manager.xml
 IdeaIC13__config/plugins/*
 VirtualBox/*.log*
 VirtualBox/VirtualBox.xml-prev
