--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 abook/addressbook~
 config/chromium/*
 config/chromium-tor/*
+config/dconf/user
 config/gtk-2.0/gtkfilechooser.ini
 config/gconf/*
 config/libreoffice/4/.lock
@@ -23,6 +24,7 @@ config/pavucontrol.ini
 config/pulse/*
 config/Trolltech.conf
 config/ranger/history
+cmus/autosave
 cmus/cache
 cmus/command-history
 cmus/lib.pl
@@ -43,6 +45,7 @@ IdeaIC13__config/options/usage.statistics.xml
 IdeaIC13__config/options/vcs.xml
 IdeaIC13__config/options/window.manager.xml
 IdeaIC13__config/plugins/*
+links/links.his
 VirtualBox/*.log*
 VirtualBox/VirtualBox.xml-prev
 VirtualBox/compreg.dat
