--- a/config/mpd/mpd.conf
+++ b/config/mpd/mpd.conf
@@ -2,10 +2,10 @@ log_file                "~/var/log/mpd.log"
 pid_file                "~/var/run/mpd/pid"
 state_file              "~/var/run/mpd/state"
 db_file                 "~/var/run/mpd/database"
-sticker_file            "~/var/run/mpd/sticker.sql"
+sticker_file            "~/var/run/mpd/sticker"
 playlist_directory      "~/var/run/mpd/playlists"
 
-music_directory         "/mnt/musik"
+music_directory         "~/music"
 
 bind_to_address         "127.0.0.1"
 restore_paused          "yes"
