--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ config/easytag
 config/gtk-2.0/gtkfilechooser.ini
 config/gconf/*
 config/htop/htoprc
+config/icedtea-web/*
 config/libreoffice/4/.lock
 config/libreoffice/4/user/backup/*
 config/libreoffice/4/user/config/javasettings_Linux_X86_64.xml
@@ -29,6 +30,7 @@ config/Trolltech.conf
 config/ranger/bookmarks
 config/ranger/history
 config/ranger/tagged
+config/ViTables/*
 cmus/autosave
 cmus/cache
 cmus/command-history
