--- a/config/i3status/config
+++ b/config/i3status/config
@@ -11,7 +11,6 @@ general {
 order += "wireless wlan0"
 order += "ethernet eth0"
 order += "run_watch DHCP"
-order += "run_watch VPN"
 order += "battery 0"
 order += "cpu_temperature 0"
 order += "load"
@@ -26,13 +25,8 @@ wireless wlan0 {
 ethernet eth0 {
         # if you use %speed, i3status requires the cap_net_admin capability
         # format_up = "E: %ip (%speed)"
-        format_up = "E: %ip"
+        format_up = "E: %ip (%speed)"
         format_down = "E: down"
-}
-
-run_watch VPN {
-        pidfile = "/var/run/vpnc/pid"
-        format = "V: %status"
 }
 
 battery 0 {
