--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ config/htop/htoprc
 config/icedtea-web/*
 config/libreoffice/4/.lock
 config/libreoffice/4/user/backup/*
+config/libreoffice/4/user/config/fontnameboxmruentries
 config/libreoffice/4/user/config/javasettings_Linux_X86_64.xml
 config/libreoffice/4/user/extensions/*
 config/libreoffice/4/user/psprint/pspfontcache
