--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ config/ranger/bookmarks
 config/ranger/history
 config/ranger/tagged
 config/ViTables/*
+config/vlc/vlc-qt-interface.conf
 cmus/autosave
 cmus/cache
 cmus/command-history
