--- a/languagetool-ooo.cfg
+++ b/languagetool-ooo.cfg
@@ -1,12 +1,19 @@
-#LanguageTool configuration
-#Thu Aug 07 12:37:46 BST 2014
+#LanguageTool configuration (4.4.1/2019-01-13 22:25)
+#Tue Feb 05 22:23:23 GMT 2019
+taggerShowsDisambigLog=false
 disabledRules.en-US=EN_QUOTES,THREE_NN
 autoDetect=false
 disabledCategories.en-US=
 serverPort=8081
 useGUIConfig=false
 enabledRules.en-US=
+numberParagraphs=5
+configurableRuleValues=
 serverMode=false
-disabledRules.en-GB=EN_GB_SIMPLE_REPLACE,EN_UNPAIRED_BRACKETS
+doResetCheck=false
+disabledRules.en-GB=EN_GB_SIMPLE_REPLACE,EN_UNPAIRED_BRACKETS,EMPTY_LINE
 disabledCategories.en-GB=
+underlineColors=
+errorColors=
 enabledRules.en-GB=
+enabledCategories.en-GB=
