Ignore more Idea files.

--- a/.gitignore
+++ b/.gitignore
@@ -176,24 +176,26 @@ mozilla/firefox/profile.*/webappsstore.sqlite-shm
 mozilla/firefox/profile.*/webappsstore.sqlite-wal
 mozilla/firefox/profile.*/xulstore.json
 mutt/aliases.bak
-Idea*/config/componentVersions/*
-Idea*/config/options/appComponentVersions.xml
-Idea*/config/options/dimensions.xml
-Idea*/config/options/feature.usage.statistics.xml
-Idea*/config/options/find.recents.xml
-Idea*/config/options/jdk.table.xml
-Idea*/config/options/options.xml
-Idea*/config/options/other.xml
-Idea*/config/options/proxy.settings.pwd
-Idea*/config/options/recentProjects.xml
-Idea*/config/options/runner.layout.xml
-Idea*/config/options/statistics.application.usages.xml
-Idea*/config/options/usage.statistics.xml
-Idea*/config/options/vcs.xml
-Idea*/config/options/window.manager.xml
-Idea*/config/plugins/*
-Idea*/config/port
-Idea*/system/*
+config/JetBrains/Idea*/config/componentVersions/*
+config/JetBrains/Idea*/options/appComponentVersions.xml
+config/JetBrains/Idea*/options/actionSummary.xml
+config/JetBrains/Idea*/options/dimensions.xml
+config/JetBrains/Idea*/options/feature.usage.statistics.xml
+config/JetBrains/Idea*/options/find.recents.xml
+config/JetBrains/Idea*/options/jdk.table.xml
+config/JetBrains/Idea*/options/options.xml
+config/JetBrains/Idea*/options/other.xml
+config/JetBrains/Idea*/options/proxy.settings.pwd
+config/JetBrains/Idea*/options/recentProjects.xml
+config/JetBrains/Idea*/options/runner.layout.xml
+config/JetBrains/Idea*/options/statistics.application.usages.xml
+config/JetBrains/Idea*/options/usage.statistics.xml
+config/JetBrains/Idea*/options/updates.xml
+config/JetBrains/Idea*/options/vcs.xml
+config/JetBrains/Idea*/options/window.manager.xml
+config/JetBrains/Idea*/plugins/*
+config/JetBrains/Idea*/port
+config/JetBrains/Idea*/system/*
 VirtualBox/*.log*
 VirtualBox/VirtualBox.xml
 VirtualBox/VirtualBox.xml-prev
