Ignore Ledger Live config.

--- a/.gitignore
+++ b/.gitignore
@@ -77,6 +77,7 @@ config/libreoffice/4/user/registrymodifications.xcu
 config/libreoffice/4/user/store/.templdir.cache
 config/libreoffice/4/user/temp/document_io_logring.txt
 config/libreoffice/4/user/uno_packages/*
+config/Ledger Live/*
 config/LightTable/Cache/*
 config/LightTable/cookies
 config/LightTable/cookies-journal
