--- a/config/viewnior/viewnior.conf
+++ b/config/viewnior/viewnior.conf
@@ -5,7 +5,7 @@ show-hidden=false
 smooth-images=true
 confirm-delete=true
 reload-on-save=false
-show-menu-bar=false
+show-menu-bar=true
 show-toolbar=true
 show-scrollbar=true
 start-maximized=false
