--- a/.gitignore
+++ b/.gitignore
@@ -198,5 +198,6 @@ config/JetBrains/Idea*/options/window.manager.xml
 config/JetBrains/Idea*/plugins/*
 config/JetBrains/Idea*/port
 config/JetBrains/Idea*/system/*
+config/JetBrains/Idea*/workspace/*
 config/VirtualBox/*.log*
 config/VirtualBox/VirtualBox.xml-prev
