--- a/.gitignore
+++ b/.gitignore
@@ -58,6 +58,7 @@ config/*chrom*/Safe Browsing*
 config/*chrom*/ShaderCache*
 config/*chrom*/ev_hashes_whitelist.bin
 config/*chrom*/pnacl*
+config/configstore/update-notifier-npm.json
 config/Electron/blob storage*
 config/Electron/Local Storage*
 config/Electron/Cache/*
@@ -78,6 +79,29 @@ config/gtk-3.0/bookmarks
 config/geeqie/*
 config/gconf/*
 config/icedtea-web/*
+config/JetBrains/Idea*/config/componentVersions/*
+config/JetBrains/Idea*/options/appComponentVersions.xml
+config/JetBrains/Idea*/options/actionSummary.xml
+config/JetBrains/Idea*/options/dimensions.xml
+config/JetBrains/Idea*/options/feature.usage.statistics.xml
+config/JetBrains/Idea*/options/find.recents.xml
+config/JetBrains/Idea*/options/jdk.table.xml
+config/JetBrains/Idea*/options/options.xml
+config/JetBrains/Idea*/options/other.xml
+config/JetBrains/Idea*/options/proxy.settings.pwd
+config/JetBrains/Idea*/options/recentProjects.xml
+config/JetBrains/Idea*/options/runner.layout.xml
+config/JetBrains/Idea*/options/statistics.application.usages.xml
+config/JetBrains/Idea*/options/usage.statistics.xml
+config/JetBrains/Idea*/options/updates.xml
+config/JetBrains/Idea*/options/vcs.xml
+config/JetBrains/Idea*/options/window.manager.xml
+config/JetBrains/Idea*/plugins/*
+config/JetBrains/Idea*/port
+config/JetBrains/Idea*/system/*
+config/JetBrains/Idea*/workspace/*
+config/VirtualBox/*.log*
+config/VirtualBox/VirtualBox.xml-prev
 config/libreoffice/4/.lock
 config/libreoffice/4/cache/*
 config/libreoffice/4/user/backup/*
@@ -192,26 +216,3 @@ mozilla/firefox/profile.*/webappsstore.sqlite-shm
 mozilla/firefox/profile.*/webappsstore.sqlite-wal
 mozilla/firefox/profile.*/xulstore.json
 mutt/aliases.bak
-config/JetBrains/Idea*/config/componentVersions/*
-config/JetBrains/Idea*/options/appComponentVersions.xml
-config/JetBrains/Idea*/options/actionSummary.xml
-config/JetBrains/Idea*/options/dimensions.xml
-config/JetBrains/Idea*/options/feature.usage.statistics.xml
-config/JetBrains/Idea*/options/find.recents.xml
-config/JetBrains/Idea*/options/jdk.table.xml
-config/JetBrains/Idea*/options/options.xml
-config/JetBrains/Idea*/options/other.xml
-config/JetBrains/Idea*/options/proxy.settings.pwd
-config/JetBrains/Idea*/options/recentProjects.xml
-config/JetBrains/Idea*/options/runner.layout.xml
-config/JetBrains/Idea*/options/statistics.application.usages.xml
-config/JetBrains/Idea*/options/usage.statistics.xml
-config/JetBrains/Idea*/options/updates.xml
-config/JetBrains/Idea*/options/vcs.xml
-config/JetBrains/Idea*/options/window.manager.xml
-config/JetBrains/Idea*/plugins/*
-config/JetBrains/Idea*/port
-config/JetBrains/Idea*/system/*
-config/JetBrains/Idea*/workspace/*
-config/VirtualBox/*.log*
-config/VirtualBox/VirtualBox.xml-prev
