Add PyCharm ignores.

--- a/.gitignore
+++ b/.gitignore
@@ -92,14 +92,33 @@ config/JetBrains/Idea*/options/proxy.settings.pwd
 config/JetBrains/Idea*/options/recentProjects.xml
 config/JetBrains/Idea*/options/runner.layout.xml
 config/JetBrains/Idea*/options/statistics.application.usages.xml
-config/JetBrains/Idea*/options/usage.statistics.xml
 config/JetBrains/Idea*/options/updates.xml
+config/JetBrains/Idea*/options/usage.statistics.xml
 config/JetBrains/Idea*/options/vcs.xml
 config/JetBrains/Idea*/options/window.manager.xml
 config/JetBrains/Idea*/plugins/*
 config/JetBrains/Idea*/port
 config/JetBrains/Idea*/system/*
 config/JetBrains/Idea*/workspace/*
+config/JetBrains/PyCharm*/config/componentVersions/*
+config/JetBrains/PyCharm*/mdn/*
+config/JetBrains/PyCharm*/options/appComponentVersions.xml
+config/JetBrains/PyCharm*/options/actionSummary.xml
+config/JetBrains/PyCharm*/options/cachedDictionary.xml
+config/JetBrains/PyCharm*/options/feature.usage.statistics.xml
+config/JetBrains/PyCharm*/options/options.xml
+config/JetBrains/PyCharm*/options/other.xml
+config/JetBrains/PyCharm*/options/jdk.table.xml
+config/JetBrains/PyCharm*/options/recentProjects.xml
+config/JetBrains/PyCharm*/options/runner.layout.xml
+config/JetBrains/PyCharm*/options/updates.xml
+config/JetBrains/PyCharm*/options/usage.statistics.xml
+config/JetBrains/PyCharm*/options/vcs.xml
+config/JetBrains/PyCharm*/options/window.state.xml
+config/JetBrains/PyCharm*/plugins/*
+config/JetBrains/PyCharm*/port
+config/JetBrains/PyCharm*/tasks/*
+config/JetBrains/PyCharm*/workspace/*
 config/VirtualBox/*.log*
 config/VirtualBox/compreg.dat
 config/VirtualBox/VirtualBox.xml-prev
