--- a/config/applications/chrome-privoxy.desktop
+++ b/config/applications/chrome-privoxy.desktop
@@ -3,9 +3,9 @@ Version=1.0
 Type=Application
 Terminal=false
 Icon[en_US]=/usr/share/icons/hicolor/256x256/apps/google-chrome.png
-Name[en_US]=Chrome Tor UA (sandbox)
-Exec=chrome-tor-ua %u
-Name=Chrome Tor (sandbox)
+Name[en_US]=Chrome Privoxy (sandbox)
+Exec=chrome-privoxy %u
+Name=Chrome Privoxy (sandbox)
 GenericName=Web Browser
 Icon=/usr/share/icons/hicolor/256x256/apps/google-chrome.png
 Categories=Network;GNOME;GTK;WebBrowser;
